# djallin2

./: .gitignore  MANIFEST.in  README.md  chatdj.py  chatdj.spec  config.example.toml  dev-requirements.txt  example_config.txt  extra-requirements.txt  quick_config.txt  requirements.txt  setup.cfg  test_stuff.py
.github/workflows/: mac-release.yml  pyinstaller-windows.yml  pypi-release.yml  python-publish.yml  release-pipeline.yml  windows-release.yml
discobot/: SoundServer.py  StatTracker.py  __init__.py  __main__.py  discord.py  twitch.py
discobot/DiscordDownloader/: __main__.py
djallin2/: OAuth2Receiver.py  SoundServer.py  StatTracker.py  __init__.py  cli.py  twitch.py
