[metadata]
name = djallin2
version = 0.5.0
description = Twitch noisemaker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vilhelmen/djallin2
classifiers =
    Programming Language :: Python :: 3
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = djallin2
packages = find:
python_requires = >=3.9
install_requires =
    toml
    tomlkit
    requests
    python-dateutil
    websockets
    playsound;platform_system=='Darwin'

[options.packages.find]
where = djallin2