[metadata]
name = djallin2
# ALPHA/BETA IS A.B.Cx.D STOP MESSING IT UP
version = 0.6.5
description = Twitch noisemaker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vilhelmen/djallin2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.9
install_requires =
    toml
    tomlkit
    requests
    python-dateutil
    websockets
    packaging
    pyobjc;platform_system=='Darwin'
    pywin32;platform_system=='Windows'

[options.packages.find]
where = .